--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mantine/core": "^8.1.2",
     "@mantine/hooks": "^8.1.2",
+    "@tabler/icons-react": "^3.34.0",
     "axios": "^1.10.0",
     "next": "15.3.3",
     "react": "^19.0.0",
