--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
     "@mantine/carousel": "^8.1.2",
     "@mantine/core": "^8.1.2",
     "@mantine/hooks": "^8.1.2",
