--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "embla-carousel-react": "^8.5.2",
     "next": "15.3.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
