--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@emotion/react": "^11.14.0",
     "@mantine/carousel": "^8.1.2",
     "@mantine/core": "^8.1.2",
+    "@mantine/dates": "^8.1.2",
     "@mantine/hooks": "^8.1.2",
     "@tabler/icons-react": "^3.34.0",
     "axios": "^1.10.0",
+    "dayjs": "^1.11.13",
     "embla-carousel": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
     "next": "15.3.3",
