--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mantine/dates": "^8.1.2",
     "@mantine/form": "^8.1.2",
     "@mantine/hooks": "^8.1.2",
+    "@mantine/notifications": "^8.1.3",
     "@react-google-maps/api": "^2.20.7",
     "@tabler/icons-react": "^3.34.0",
     "axios": "^1.10.0",
